--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "assets-loader": "^0.5.0",
     "gsap": "^1.19.1",
     "lodash": "^4.17.4",
     "three": "^0.84.0",
