--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "assets-loader": "^0.5.0",
     "gsap": "^1.19.1",
     "lodash": "^4.17.4",
+    "smooth-scrolling": "^2.3.7",
     "three": "^0.84.0",
     "vue": "^2.1.0",
     "vue-router": "^2.1.3"
