--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "raroul <raoul.gaillard@hetic.net>",
   "private": true,
   "scripts": {
+    "postinstall": "npm install express",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "postinstall": "npm install express"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
     "assets-loader": "^0.5.0",
