--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "deploy": "git subtree push --prefix dist heroku master"
+    "deploy": "git push heroku master",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "assets-loader": "^0.5.0",
@@ -16,16 +17,16 @@
     "smooth-scrolling": "^2.3.7",
     "three": "^0.84.0",
     "vue": "^2.1.0",
-    "vue-router": "^2.1.3"
-  },
-  "devDependencies": {
+    "vue-router": "^2.1.3",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-plugin-lodash": "^3.2.11",
     "babel-preset-es2015": "^6.0.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
+    "extract-loader": "^0.1.0",
     "file-loader": "^0.9.0",
+    "html-loader": "^0.4.5",
     "node-sass": "^4.3.0",
     "sass-loader": "^4.1.1",
     "url-loader": "^0.5.7",
