--- a/package.json
+++ b/package.json
@@ -12,12 +12,6 @@
   },
   "dependencies": {
     "assets-loader": "^0.5.0",
-    "gsap": "^1.19.1",
-    "lodash": "^4.17.4",
-    "smooth-scrolling": "^2.3.7",
-    "three": "^0.84.0",
-    "vue": "^2.1.0",
-    "vue-router": "^2.1.3",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-plugin-lodash": "^3.2.11",
@@ -26,11 +20,17 @@
     "css-loader": "^0.25.0",
     "extract-loader": "^0.1.0",
     "file-loader": "^0.9.0",
+    "gsap": "^1.19.1",
     "html-loader": "^0.4.5",
+    "lodash": "^4.17.4",
     "node-sass": "^4.3.0",
     "sass-loader": "^4.1.1",
+    "three": "^0.84.0",
     "url-loader": "^0.5.7",
+    "virtual-scroll": "^1.1.1",
+    "vue": "^2.1.0",
     "vue-loader": "^10.0.0",
+    "vue-router": "^2.1.3",
     "vue-template-compiler": "^2.1.0",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
