--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "url-loader": "^0.5.7",
     "virtual-scroll": "^1.1.1",
     "vue": "^2.1.0",
+    "vue-analytics": "^3.2.0",
     "vue-loader": "^10.0.0",
     "vue-router": "^2.1.3",
     "vue-template-compiler": "^2.1.0",
