--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "assets-loader": "^0.5.0",
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-plugin-lodash": "^3.2.11",
@@ -24,6 +25,7 @@
     "html-loader": "^0.4.5",
     "lodash": "^4.17.4",
     "node-sass": "^4.3.0",
+    "postcss-loader": "^1.3.3",
     "sass-loader": "^4.1.1",
     "three": "^0.84.0",
     "url-loader": "^0.5.7",
