--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "file-loader": "^0.9.0",
     "gsap": "^1.19.1",
     "html-loader": "^0.4.5",
+    "in-viewport": "^3.4.2",
     "lodash": "^4.17.4",
     "node-sass": "^4.3.0",
     "postcss-loader": "^1.3.3",
