--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "raroul <raoul.gaillard@hetic.net>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot --host 0.0.0.0",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "deploy": "git push heroku master",
     "postinstall": "npm run build"
