--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^6.0.0",
     "babel-plugin-lodash": "^3.2.11",
     "babel-preset-es2015": "^6.0.0",
+    "compression": "^1.6.2",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "extract-loader": "^0.1.0",
